Updated triggers markdown.

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -886,302 +886,278 @@ This artefact contains the physical schema of the database, the identification a
   </tbody>
 </table>
 
+<table>
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER02</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>Only a User who Joined a Project can Reply in it's Forum</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.insertReply() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT idJoined FROM plenum.Joined, plenum.ForumPost
+                WHERE (new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
+              ELSE
+                INSERT INTO plenum.Reply(creationDate, lastEditDate, content, idPost, idUser)
+                VALUES (new.creationDate, new.lastEditDate, new.content, new.idPost, new.idUser);
+              END IF;
+              RETURN NEW;
+            END
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateReply BEFORE INSERT ON plenum.Reply
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertReply();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
 <table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER02</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>Only a User who Joined a Project can Reply in it's Forum</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreateReply ON Reply;
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER03</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>Only a user who has Joined a Project can create Comments for a Project Task</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.insertComent() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT idJoined FROM plenum.Joined, plenum.Task
+                WHERE (new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+              ELSE
+                INSERT INTO plenum.Comment(creationDate, lastEditDate, idTask, idUser, idParent)
+                VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
+              END IF;
+              RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
 
-        CREATE OR REPLACE FUNCTION insertReply() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
+          CREATE TRIGGER onCreateComment BEFORE INSERT ON plenum.Comment
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertComent();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER04</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>Only a User who was Assigned to a Task can create a Close Request for it.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.insertCloseRequest() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT * FROM plenum.Assigned
+                WHERE (new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+              ELSE
+                INSERT INTO plenum.Comment(creationDate, lastEditDate, idTask, idUser, idParent)
+                VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
+              END IF
+          CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON plenum.CloseRequest
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertCloseRequest();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER05</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>Only a User who Joined a Project can create Tasks for It.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.insertTask() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT Joined.idJoined FROM plenum.Joined
+                WHERE (new.idUser = Joined.idUser AND new.idProject = Joined.idProject))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
+              ELSE
+                INSERT INTO plenum.Task(creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject)
+                VALUES (new.creationDate, new.lastEditDate, new.title, new.description, new.deadline, new.completed, new.completetionDate, new.idUser, new.idProject);
+              END IF;
+              RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateTask BEFORE INSERT ON plenum.Task
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertTask();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER06</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>Only a User who Joined a Project can be assigned to it's Tasks.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.insertAssigned() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+              IF NOT EXISTS (
+                SELECT Joined.idJoined FROM plenum.Joined, plenum.Task
+                WHERE (new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject))
+              THEN
+                RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
+              ELSE
+                INSERT INTO plenum.Assigned(idUser, idTask)
+                VALUES (new.idUser, new.idTask);
+              END IF;
+              RETURN NEW;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
+
+          CREATE TRIGGER onCreateAssigned BEFORE INSERT ON plenum.Assigned
+          FOR EACH ROW
+          EXECUTE PROCEDURE plenum.insertAssigned();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER07</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>A Project can only be private while the Owner is a Premium User.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.canProjectBePrivate() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
             IF NOT EXISTS (
-              SELECT idJoined FROM Joined, ForumPost
-              WHERE (new.idPost = ForumPost.idPost AND ForumPost.idProject = Joined.idProject AND new.idUser = Joined.idUser))
+              SELECT * FROM plenum.Joined, plenum.UserTable
+              WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
             THEN
-              RAISE EXCEPTION 'Only a user who joined a project can reply to posts in its forum.';
+              RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
             ELSE
-              INSERT INTO Reply(creationDate, lastEditDate, content, idPost, idUser)
-              VALUES (new.creationDate, new.lastEditDate, new.content, new.idPost, new.idUser);
+              INSERT INTO plenum.Project(idProject, creationDate, name, description, private)
+              VALUES (new.idProject, new.creationDate, new.name, new.description, new.private);
             END IF;
             RETURN NEW;
-          END
-        $BODY$
-        LANGUAGE plpgsql;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
 
-        CREATE TRIGGER onCreateReply BEFORE INSERT ON Reply
-        FOR EACH ROW
-        EXECUTE PROCEDURE insertReply();
-        </code>
-        </td>
-        </tr>
-    </tbody>
+          CREATE TRIGGER onCreateProject BEFORE INSERT OR UPDATE ON plenum.Project
+          FOR EACH ROW
+          WHEN (NEW.private IS TRUE)
+          EXECUTE PROCEDURE plenum.canProjectBePrivate();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
-
 <table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER03</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>Only a user who has Joined a Project can create Comments for a Project Task</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreateComment ON Comment;
-
-        CREATE OR REPLACE FUNCTION insertComent() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
-            IF NOT EXISTS (
-              SELECT idJoined FROM Joined, Task
-              WHERE (new.idTask = Task.idTask AND Task.idProject = Joined.idProject AND new.idUser = Joined.idUser))
+  <tbody>
+    <tr>
+      <td><b>Trigger reference<b></td>
+      <td>TRIGGER08</td>
+    </tr>
+    <tr>
+      <td><b>Trigger description</b></td>
+      <td>A Project can only be private while the Owner is a Premium User.</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <pre>
+          CREATE OR REPLACE FUNCTION plenum.updateUserTable() RETURNS TRIGGER AS
+          $BODY$
+            BEGIN
+            IF EXISTS (
+              SELECT * FROM plenum.Joined, plenum.Project
+              WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND new.idProject = Joined.idProject AND new.idProject = Project.idProject AND Project.private = true)
             THEN
-              RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
+              RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
             ELSE
-              INSERT INTO Comment(creationDate, lastEditDate, idTask, idUser, idParent)
-              VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
+              INSERT INTO plenum.UserTable(username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry)
+              VALUES (new.username, new.password, new.email, new.premium, new.banned, new.name, new.gender, new.address, new.institution, new.description, new.birthDate, new.idCountry);
             END IF;
             RETURN NEW;
-          END;
-        $BODY$
-        LANGUAGE plpgsql;
+            END;
+          $BODY$
+          LANGUAGE plpgsql;
 
-        CREATE TRIGGER onCreateComment BEFORE INSERT ON Comment
-        FOR EACH ROW
-        EXECUTE PROCEDURE insertComent();
-        </code>
-        </td>
-        </tr>
-    </tbody>
+          CREATE TRIGGER onUpdateUser BEFORE INSERT OR UPDATE ON plenum.UserTable
+          FOR EACH ROW
+          WHEN (new.premium = false)
+          EXECUTE PROCEDURE plenum.updateUserTable();
+        </pre>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
-
-<table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER04</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>Only a User who was Assigned to a Task can create a Close Request for it.</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreateCloseRequest ON CloseRequest;
-
-        CREATE OR REPLACE FUNCTION insertCloseRequest() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
-            IF NOT EXISTS (
-              SELECT * FROM Assigned
-              WHERE (new.idTask = Assigned.idTask AND new.idUser = Assigned.idUser))
-            THEN
-              RAISE EXCEPTION 'Only a user who joined a project can create comments for a Project Task.';
-            ELSE
-              INSERT INTO Comment(creationDate, lastEditDate, idTask, idUser, idParent)
-              VALUES (new.creationDate, new.lastEditDate, new.idTask, new.idUser, new.idParent);
-            END IF;
-            RETURN NEW;
-          END;
-        $BODY$
-        LANGUAGE plpgsql;
-
-        CREATE TRIGGER onCreateCloseRequest BEFORE INSERT ON CloseRequest
-        FOR EACH ROW
-        EXECUTE PROCEDURE insertCloseRequest();
-        </code>
-        </td>
-        </tr>
-    </tbody>
-</table>
-
-<table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER05</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>Only a User who Joined a Project can create Tasks for It.</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreateTask ON Task;
-
-        CREATE OR REPLACE FUNCTION insertTask() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
-            IF NOT EXISTS (
-              SELECT Joined.idJoined FROM Joined
-              WHERE (new.idUser = Joined.idUser AND new.idProject = Joined.idProject))
-            THEN
-              RAISE EXCEPTION 'Only a user who joined a project can create tasks for it.';
-            ELSE
-              INSERT INTO Task(creationDate, lastEditDate, title, description, deadline, completed, completetionDate, idUser, idProject)
-              VALUES (new.creationDate, new.lastEditDate, new.title, new.description, new.deadline, new.completed, new.completetionDate, new.idUser, new.idProject);
-            END IF;
-            RETURN NEW;
-          END;
-        $BODY$
-        LANGUAGE plpgsql;
-
-        CREATE TRIGGER onCreateTask BEFORE INSERT ON Task
-        FOR EACH ROW
-        EXECUTE PROCEDURE insertTask();
-        </code>
-        </td>
-        </tr>
-    </tbody>
-</table>
-
-<table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER06</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>Only a User who Joined a Project can be assigned to it's Tasks.</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreateAssigned ON Assigned;
-
-        CREATE OR REPLACE FUNCTION insertAssigned() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
-            IF NOT EXISTS (
-              SELECT Joined.idJoined FROM Joined, Task
-              WHERE (new.idUser = Joined.idUser AND new.idTask = Task.idTask AND Task.idProject = Joined.idProject))
-            THEN
-              RAISE EXCEPTION 'Only a user who joined a project can be assigned to its tasks.';
-            ELSE
-              INSERT INTO Assigned(idUser, idTask)
-              VALUES (new.idUser, new.idTask);
-            END IF;
-            RETURN NEW;
-          END;
-        $BODY$
-        LANGUAGE plpgsql;
-
-        CREATE TRIGGER onCreateAssigned BEFORE INSERT ON Assigned
-        FOR EACH ROW
-        EXECUTE PROCEDURE insertAssigned();
-        </code>
-        </td>
-        </tr>
-    </tbody>
-</table>
-
-<table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER07</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>A Project can only be private while the Owner is a Premium User.</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onCreateProject ON Project;
-
-        CREATE OR REPLACE FUNCTION canProjectBePrivate() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
-          IF NOT EXISTS (
-            SELECT * FROM Joined, UserTable
-            WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
-          THEN
-            RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
-          ELSE
-            INSERT INTO Project(idProject, creationDate, name, description, private)
-            VALUES (new.idProject, new.creationDate, new.name, new.description, new.private);
-          END IF;
-          RETURN NEW;
-          END;
-        $BODY$
-        LANGUAGE plpgsql;
-
-        CREATE TRIGGER onCreateProject BEFORE INSERT OR UPDATE ON Project
-        FOR EACH ROW
-        WHEN (NEW.private IS TRUE)
-        EXECUTE PROCEDURE canProjectBePrivate();
-        </code>
-        </td>
-        </tr>
-    </tbody>
-</table>
-
-<table>
-    <tbody>
-        <tr>
-        <td><b>Trigger reference<b></td>
-        <td>TRIGGER08</td>
-        </tr>
-        <tr>
-        <td><b>Trigger description</b></td>
-        <td>A Project can only be private while the Owner is a Premium User.</td>
-        </tr>
-        <tr>
-        <td colspan="2">
-        <code>
-        DROP TRIGGER IF EXISTS onUpdateUser ON UserTable;
-
-        CREATE OR REPLACE FUNCTION updateUserTable() RETURNS TRIGGER AS
-        $BODY$
-          BEGIN
-          IF EXISTS (
-            SELECT * FROM Joined, Project
-            WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND new.idProject = Joined.idProject AND new.idProject = Project.idProject AND Project.private = true)
-          THEN
-            RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
-          ELSE
-            INSERT INTO UserTable(username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry)
-            VALUES (new.username, new.password, new.email, new.premium, new.banned, new.name, new.gender, new.address, new.institution, new.description, new.birthDate, new.idCountry);
-          END IF;
-          RETURN NEW;
-          END;
-        $BODY$
-        LANGUAGE plpgsql;
-
-        CREATE TRIGGER onUpdateUser BEFORE INSERT OR UPDATE ON UserTable
-        FOR EACH ROW
-        WHEN (new.premium = false)
-        EXECUTE PROCEDURE updateUserTable();
-        </code>
-        </td>
-        </tr>
-    </tbody>
-</table>
 
 ## 4. Complete SQL Code
-
-> The database script must also include the SQL to populate a database with test data with an amount of tuples suitable for testing and with plausible values for the fields of the database.
-> This code should also be included in the group's github repository as an SQL script, and a link include here.
 
 ```SQL
 DROP SCHEMA IF EXISTS plenum CASCADE;
