--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -1084,7 +1084,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Trigger description</b></td>
-      <td>A Project can only be private while the Owner is a Premium User.</td>
+      <td>A Project can only be private while the Owner is a premium User.</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1096,7 +1096,7 @@ This artefact contains the physical schema of the database, the identification a
               SELECT * FROM plenum.Joined, plenum.UserTable
               WHERE new.idProject = Joined.idProject AND Joined.role = 'Owner' AND Joined.idUser = UserTable.idUser AND UserTable.premium = true)
             THEN
-              RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
+              RAISE EXCEPTION 'A Project can only be private while the Owner is a premium User.';
             ELSE
               INSERT INTO plenum.Project(idProject, creationDate, name, description, private)
               VALUES (new.idProject, new.creationDate, new.name, new.description, new.private);
@@ -1124,7 +1124,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
       <td><b>Trigger description</b></td>
-      <td>A Project can only be private while the Owner is a Premium User.</td>
+      <td>A Project can only be private while the Owner is a premium User.</td>
     </tr>
     <tr>
       <td colspan="2">
@@ -1136,7 +1136,7 @@ This artefact contains the physical schema of the database, the identification a
               SELECT * FROM plenum.Joined, plenum.Project
               WHERE new.idUser = Joined.idUser AND Joined.role = 'Owner' AND new.idProject = Joined.idProject AND new.idProject = Project.idProject AND Project.private = true)
             THEN
-              RAISE EXCEPTION 'A Project can only be private while the Owner is a Premium User.';
+              RAISE EXCEPTION 'A Project can only be private while the Owner is a premium User.';
             ELSE
               INSERT INTO plenum.UserTable(username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry)
               VALUES (new.username, new.password, new.email, new.premium, new.banned, new.name, new.gender, new.address, new.institution, new.description, new.birthDate, new.idCountry);
@@ -1157,7 +1157,7 @@ This artefact contains the physical schema of the database, the identification a
 </table>
 
 
-## 4. Complete SQL Code
+## 4. Complete SQL pre
 
 ```SQL
 DROP SCHEMA IF EXISTS plenum CASCADE;
@@ -1172,7 +1172,7 @@ DROP TABLE IF EXISTS Admin;
 DROP TABLE IF EXISTS UserTable;
 
 /* premium signature*/
-DROP TABLE IF EXISTS PremiumSignature;
+DROP TABLE IF EXISTS premiumSignature;
 
 /* country */
 DROP TABLE IF EXISTS Country;
@@ -1247,8 +1247,8 @@ CREATE TABLE UserTable(
 );
 
 /* premium signature */
-CREATE TABLE PremiumSignature(
-	idPremium serial PRIMARY KEY,
+CREATE TABLE premiumSignature(
+	idpremium serial PRIMARY KEY,
 	startDate timestamp NOT NULL,
 	duration  interval NOT NULL CHECK (duration > interval '0'),
 	idUser integer,
@@ -1678,7 +1678,7 @@ insert into plenum.usertable (username, password, email, gender, name, address, 
 insert into plenum.usertable (username, password, email, gender, name, address, institution, description, birthDate, idCountry) values ('charstonj', 'qSktpJ0wB', 'charstonj@microsoft.com', 'Male', 'Cornell Harston', '2 Charing Cross Avenue', 'Rhynyx', 'Nullam sit amet turpis elementum ligula vehicula consequat. Morbi a ipsum. Integer a nibh.', '1995-06-01', 20);
 
 
---PremiumSignature
+--premiumSignature
 insert into plenum.premiumsignature (startDate, duration, idUser) values ('2017-02-25', '2017-10-19', 1);
 insert into plenum.premiumsignature (startDate, duration, idUser) values ('2018-03-13', '2017-09-22', 2);
 insert into plenum.premiumsignature (startDate, duration, idUser) values ('2017-02-07', '2018-03-12', 3);
