Added Performance indices example table :pencil2:

--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -561,7 +561,7 @@ This artefact contains the physical schema of the database, the identification a
     <tr>
         <td><b>Query frequency</b></td>
         <td>Once per day</td>
-    </td>
+    </tr>
     <tr>
         <td><b>SQL Code</b></td>
         <td><code "sql">
@@ -573,20 +573,48 @@ This artefact contains the physical schema of the database, the identification a
 
 
 ## 2. Proposed Indices
-
 ### 2.1. Performance Indices
 
-| Index reference | IDX01                                  |
-| Related queries | SELECT01, ...                          |
-| Index relation  | Relation where the index is applied    |
-| Index attribute | Attribute where the index is applied   |
-| Index type      | B-tree, Hash, GiST or GIN              |
-| Cardinality     | Attribute cardinality: low/medium/high |
-| Clustering      | Clustering of the index                |
-| --------------- | -------------------------------------- |
-| Justification   | Justification for the proposed index   |
-| --------------- | -------------------------------------- |
-| SQL code                                                 |
+<table>
+  <tbody>
+    <tr>
+      <tb><b>Index reference</b></tb>
+      <tb>IDX01</tb>
+    </tr>
+    <tr>
+      <tb><b>Related queries</b></tb>
+      <tb>TBD</tb>
+    </tr>
+    <tr>
+      <tb><b>Index relation</b></tb>
+      <tb>tbd</tb>
+    </tr>
+    <tr>
+      <tb><b>Index attribute</b></tb>
+      <tb>tbd</tb>
+    </tr>
+    <tr>
+      <tb><b>Index type</b></tb>
+      <tb>tbd</tb>
+    </tr>
+    <tr>
+      <tb><b>Cardinality</b></tb>
+      <tb>tbd</tb>
+    </tr>
+    <tr>
+      <tb><b>Clustering</b></tb>
+      <tb>tbd</tb>
+    </tr>
+    <tr>
+      <tb><b>Justification</b></tb>
+      <tb>tbd</tb>
+    </tr>
+    <tr>
+      <tb colspan="2">
+      </tb>
+    </tr>
+  </tbody>
+</table>
 
 
 ### 2.2. Full-text Search Indices
