--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -29,23 +29,420 @@ This artefact contains the physical schema of the database, the identification a
 ### 1.2. Frequent Queries
 
 <table>
-  <tr>
-    <td><b>Query reference</b></td>
-    <td><b>SELECT01</b></td>
-  </tr>
-  <tr>
-    <td><b>Query description</b></td>
-    <td><b>One sentence describing the query goal</b></td>
-  </tr>
-  <tr>
-    <td><b>Query frequency</b></td>
-    <td><b>magnitude per time</b></td>
-  </tr>
-  <tr>
-    <td colspan =2>
-    SQL Code
-    </td>
-  </tr>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT01</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get All Users</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>hundreds per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT username, email, gender, description
+        FROM UserTable;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT02</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get User</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>hundreds per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT username, email, gender, description
+        FROM UserTable
+        WHERE UserTable.idUser= $idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT03</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get All User's Tasks</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>hundreds per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT title
+        FROM Task
+        WHERE Task.idUser=$idUser
+        ORDER BY deadline ASC;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT04</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get All User's Projects</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT Project.name FROM Project, Joined, UserTable
+        WHERE Project.idProject=Joined.idProject
+        AND Joined.idUser=UserTable.idUser
+        AND UserTable.idUser = $idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT05</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Check if User is Premium</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT premium
+        FROM UserTable
+        WHERE UserTable.idUser = $idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT06</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get User PremiumSignature Information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT startDate, duration, name
+        FROM PremiumSignature, UserTable
+        WHERE UserTable.idUser= PremiumSignature.idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT07</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Check if User is Banned</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT banned
+        FROM UserTable
+        WHERE UserTable.idUser = $idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT08</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get User BannedRecord Information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per month</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT startDate, duration, motive
+        FROM UserTable, BannedRecord
+        WHERE BannedRecord.idUser = $idUser
+        AND UserTable.idUser = BannedRecord.idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT09</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get Project's Information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT creationDate, name, description
+        FROM Project
+        WHERE idProject = $idProject;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT11</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Check if Project is Public/Private</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT private
+        FROM Project
+        WHERE idProject = $idProject;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT12</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get Project's Team Owner</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT DISTINCT username, name, email
+        FROM UserTable, Joined, Project
+        WHERE Joined.idProject=$idProject
+        AND Joined.role == 'Owner'
+        AND Joined.idUser=UserTable.idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT13</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get Project's Team Coordinators</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT DISTINCT username, name, email
+        FROM UserTable, Joined, Project
+        WHERE Joined.idProject=$idProject
+        AND Joined.role =='Coordinator'
+        AND Joined.idUser=UserTable.idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT13</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get Project's Team Members</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT DISTINCT username, name, email
+        FROM UserTable, Joined, Project
+        WHERE Joined.idProject=$idProject
+        AND Joined.role =='Member'
+        AND Joined.idUser=UserTable.idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT14</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get User's Forum Post ( by lastEditDate )</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT title, lastEditDate, name
+        FROM ForumPost, UserTable
+        WHERE ForumPost.idUser = UserTable.idUser
+        AND UserTable.idUser = $idUser;
+        ORDER BY ForumPost.lastEditDate;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT15</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get User's Post Replies</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT UserTable.name, Reply.creationDate, Reply.content, Reply.idPost
+        FROM Reply, ForumPost, UserTable
+        WHERE Reply.idPost = $idPost
+        AND Reply.idUser = UserTable.idUser;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT15</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get All User's Tasks ( by earlist deadline)</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT title, deadline
+        FROM UserTable, Task, Assigned,
+        WHERE Assigned.idUser = $idUser
+        AND Assigned.idUser = UserTable.idUser
+        AND deadline > CURRENT_DATE
+        ORDER BY deadline ASC;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT16</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get All Project's Non Completed Tasks</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>tens per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT Task.title
+        FROM Task, Project
+        WHERE Project.idProject = $idProject
+        AND Task.idProject = Project.idProject
+        AND Task.completed=FALSE;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT17</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get Task Information</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>hundreds per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT title, creationDate,lastEditDate, description, deadline
+        FROM Task
+        WHERE Task.idTask= $idTask;</code></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td><b>Query reference</b></td>
+        <td>SELECT18</td>
+    </tr>
+    <tr>
+        <td><b>Query description</b></td>
+        <td>Get Task's Comments</td>
+    </tr>
+    <tr>
+        <td><b>Query frequency</b></td>
+        <td>hundreds per day</td>
+    </tr>
+    <tr>
+        <td><b>SQL Code</b></td>
+        <td><code "sql">SELECT Comment.creationDate, Comment.lastEditDate, Comment.content, name
+        FROM Comment, UserTable, Task
+        WHERE Task.idTask = $idTask
+        AND Comment.idUser = UserTable.idUser
+        AND Comment.idTask = Task.idTask;</code></td>
+    </tr>
 </table>
 
 ### 1.3. Frequent Updates
