--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -44,7 +44,7 @@ This artefact contains the physical schema of the database, the identification a
     <tr>
         <td><b>SQL Code</b></td>
         <td><code "sql">SELECT username, email, gender, description
-        FROM UserTable;</code></td>
+                        FROM UserTable;</code></td>
     </tr>
 </table>
 
@@ -55,7 +55,7 @@ This artefact contains the physical schema of the database, the identification a
     </tr>
     <tr>
         <td><b>Query description</b></td>
-        <td>Get User</td>
+        <td>Get User Information</td>
     </tr>
     <tr>
         <td><b>Query frequency</b></td>
